updates interface